2005-12-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* emacs-mime.texi (Non-MIME): x-gnus-verbatim -> x-verbatim.

2005-11-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.texi (Various Message Variables): Addition.

2005-11-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.texi: Fix default values.

2005-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.texi (Header Commands): Clarify descriptions of
	message-cross-post-followup-to, message-reduce-to-to-cc, and
	message-insert-wide-reply.
	(Various Commands): Fix kindex for message-kill-to-signature;
	clarify description of message-tab.

2005-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.texi (Mailing Lists): Fix description about MFT.

	* gnus.texi (Emacs Lisp): Use ~/.gnus.el instead of ~/.emacs.

2005-11-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (Slow Terminal Connection): Replace old description
	with new one.

2005-11-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (Oort Gnus): Use ~/.gnus.el instead of ~/.emacs;
	replace X-Draft-Headers with X-Draft-From.

2005-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (Various Various): Fix the default value of
	nnheader-max-head-length.
	(Gnus Versions): Fix typo.

2005-11-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-coding.texi (Gnus Coding Style): Add MIME subsection.
	(Gnus Maintainance Guide): Improvements.

	* gnus.texi (Sorting the Summary Buffer): Replace 2005-10-29
	change by a reference to `Group Parameters'.  Use `(not ...)' in
	example instead of `lambda' expression.
	(Group Parameters): Add simplified sorting example based on
	example for `Sorting the Summary Buffer' from Jari Aalto
	<jari.aalto@cante.net>.
	(Example Methods): Add example for an indirect connection.

2005-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (XVarious): Fix description of gnus-use-toolbar; add
	new variable gnus-toolbar-thickness.

2005-11-09  Katsumi Yamaoka  <yamaoka@jpl.org>
