@@ -1,5 +1,5 @@
 ;;; gnus-news.el --- a hack to create GNUS-NEWS from texinfo source
-;; Copyright (C)  2004  Free Software Foundation, Inc.
+;; Copyright (C)  2004, 2005  Free Software Foundation, Inc.
 
 ;; Author: Reiner Steib  <Reiner.Steib@gmx.de>
 ;; Keywords: tools
@@ -27,12 +27,11 @@
 
 (defvar gnus-news-header-disclaimer
 "GNUS NEWS -- history of user-visible changes.
-Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004 Free Software Foundation, Inc.
+Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005 Free Software Foundation, Inc.
 See the end for copying conditions.
 
 Please send Gnus bug reports to bugs\@gnus.org.
 For older news, see Gnus info node \"New Features\".
-
 
 
 * Changes in No Gnus
@@ -46,7 +45,7 @@ For older news, see Gnus info node \"New Features\".
 ----------------------------------------------------------------------
 Copyright information:
 
-Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004 Free Software Foundation, Inc.
+Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005 Free Software Foundation, Inc.
 
    Permission is granted to anyone to make or distribute verbatim copies
    of this document as received, in any medium, provided that the
@@ -97,6 +96,10 @@ paragraph-separate: \"[ 	]*$\"\nend:\n")
       (goto-char (point-max))
       (delete-char -1)
       (goto-char (point-min))
+      ;; Avoid `*' from @ref at beginning of line:
+      (save-excursion
+	(while (re-search-forward "^\\*Note" nil t)
+	  (replace-match " \\&")))
       (save-excursion
 	(while (re-search-forward "^   \\* " nil t)
 	  (replace-match "** ")))
